--- a/css/styles.css
+++ b/css/styles.css
@@ -29,9 +29,8 @@ body{
   font-size: 15px;
   line-height: 1.6;
   animation: pulse 5s linear infinite;
-  
+  margin-bottom:150px; 
 }
-
 
 h1 {
   color: var(--primary);
@@ -136,7 +135,7 @@ input{
 }
 
 #terminal{
-  padding-left:10px;
+  padding-left:20px;
   padding-right:10px;
   /* transform: skewX(0.5deg); */
   animation: skew 5s linear infinite; /* ANIMACIJEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE*/
@@ -358,4 +357,14 @@ box-shadow: 0 2px 6px rgba(25,25,25,0.2),
     opacity: 0;
     animation: opacity 2s ease-out;
     animation-fill-mode: forwards;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
