--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
-@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/cascadia-code.min.css");
+/* @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/cascadia-code.min.css"); */
 
 * {
   box-sizing: border-box;
   margin: 0;
-  font-family: "Cascadia Code", sans-serif;
+  font-family: "Consolas", sans-serif;
   
 }
 
@@ -156,10 +156,10 @@ input{
 }
 
 /* prvi linkin za linkedin*/
-.linkedin{
+/* .linkedin{
   text-decoration: none;
   color:blue
-}
+} */
 
 
 
