--- a/css/terminal.css
+++ b/css/terminal.css
@@ -19,7 +19,8 @@
     /* background-color:#011627; */
     color:#CFD5BD;
     background-color: #030D22;
-    width: 100%;
+    /* background-color:#23252E; */
+    
     
   
   }
@@ -76,7 +77,7 @@
     background-color: transparent;
     border: 0;
     outline: 0;
-    margin-left: 8px;
+    /* margin-left: 4px; */
     color: var(--text-color);
     font-size: 15px;
   }
@@ -190,3 +191,5 @@
           background-position: top right;
       }
   }
+
+  
