--- a/css/terminal.css
+++ b/css/terminal.css
@@ -20,10 +20,10 @@
     color:#CFD5BD;
     background-color: #030D22;
     /* background-color:#23252E; */
-    
-    
-  
-  }
+    min-height: 99%;
+}
+
+
   .prompt {
     /* color: #8be9fd;
     font-size: 16px; */
@@ -43,7 +43,7 @@
     /* margin: auto;
     display: flex;
     flex-direction: column; */
-    height: 100vh;
+    /* height: 100vh; */
     /* justify-content: center;
     align-items: center; */
     padding: 8px;
